# edu_cms_api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: .env.example  db.sqlite3
src/account/: serializers.py  urls.py  views.py
src/core/: settings.py  urls.py
